[gd_scene load_steps=13 format=2]

[ext_resource path="res://source/Polygon3D/Polygon3D.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=3]
resource_local_to_scene = true
radius = 0.2

[sub_resource type="SphereMesh" id=2]
radius = 0.2
height = 0.4
radial_segments = 8
rings = 4

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
flags_unshaded = true
albedo_color = Color( 1, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=6]
resource_local_to_scene = true
flags_unshaded = true
albedo_color = Color( 1, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=7]
resource_local_to_scene = true
flags_unshaded = true
albedo_color = Color( 1, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=8]
resource_local_to_scene = true
flags_unshaded = true
albedo_color = Color( 1, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=9]
resource_local_to_scene = true
flags_unshaded = true
albedo_color = Color( 1, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=10]
resource_local_to_scene = true
flags_unshaded = true
albedo_color = Color( 1, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=11]
resource_local_to_scene = true
flags_unshaded = true
albedo_color = Color( 1, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=12]
resource_local_to_scene = true
flags_unshaded = true
albedo_color = Color( 1, 1, 0, 1 )

[sub_resource type="ConvexPolygonShape" id=5]
resource_local_to_scene = true

[node name="Polygon3D" type="StaticBody" groups=["Polygon3D"]]
collision_layer = 31
collision_mask = 31
script = ExtResource( 1 )

[node name="Point1Pivot" type="StaticBody" parent="." groups=["Pivot"]]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Point1Pivot"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Point1Pivot"]
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="Point2Pivot" type="StaticBody" parent="." groups=["Pivot"]]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Point2Pivot"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Point2Pivot"]
mesh = SubResource( 2 )
material/0 = SubResource( 6 )

[node name="Point3Pivot" type="StaticBody" parent="." groups=["Pivot"]]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Point3Pivot"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Point3Pivot"]
mesh = SubResource( 2 )
material/0 = SubResource( 7 )

[node name="Point4Pivot" type="StaticBody" parent="." groups=["Pivot"]]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Point4Pivot"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Point4Pivot"]
mesh = SubResource( 2 )
material/0 = SubResource( 8 )

[node name="Point5Pivot" type="StaticBody" parent="." groups=["Pivot"]]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Point5Pivot"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Point5Pivot"]
mesh = SubResource( 2 )
material/0 = SubResource( 9 )

[node name="Point6Pivot" type="StaticBody" parent="." groups=["Pivot"]]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Point6Pivot"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Point6Pivot"]
mesh = SubResource( 2 )
material/0 = SubResource( 10 )

[node name="Point7Pivot" type="StaticBody" parent="." groups=["Pivot"]]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Point7Pivot"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Point7Pivot"]
mesh = SubResource( 2 )
material/0 = SubResource( 11 )

[node name="Point8Pivot" type="StaticBody" parent="." groups=["Pivot"]]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="Point8Pivot"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Point8Pivot"]
mesh = SubResource( 2 )
material/0 = SubResource( 12 )

[node name="MeshInstance" type="MeshInstance" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 5 )
